# pidsis

./: .gitignore  README.md  main.py  prompt_plan.md  pull_pidstats.sh  pyproject.toml  run.sh  run_app.py  spec.md
pidsis/: __init__.py  dataframe.py  main.py  parser.py  plotting.py  run_app.py  utils.py
tests/: __init__.py  test_dataframe.py  test_integration.py  test_main.py  test_parser.py  test_utils.py
