[project]
name = "pidsis"
version = "0.1.0"
description = "Parse pidstats log files into pandas DataFrames"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2.3",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
pidsis = "pidsis.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
